@@ -109,7 +109,7 @@ public class CertificationResultManagerImpl implements CertificationResultManage
     })
     public int update(Long acbId, CertifiedProductSearchDetails existingListing,
             CertifiedProductSearchDetails updatedListing, CertificationResult orig, CertificationResult updated)
-            throws EntityCreationException, EntityRetrievalException, IOException {
+                    throws EntityCreationException, EntityRetrievalException, IOException {
         int numChanges = 0;
         // does the cert result need updated?
         boolean hasChanged = false;
@@ -166,7 +166,7 @@ public class CertificationResultManagerImpl implements CertificationResultManage
             numChanges += updateMacraMeasures(updated, orig.getG2MacraMeasures(), updated.getG2MacraMeasures(), G2_MEASURE);
         }
 
-        if (updated.isSuccess() == null || updated.isSuccess() == Boolean.FALSE) {
+        if (updated.isSuccess() == null || !updated.isSuccess()) {
             // similar to delete - remove all related items
             numChanges += updateAdditionalSoftware(updated, orig.getAdditionalSoftware(), null);
             numChanges += updateTestStandards(updatedListing, updated, orig.getTestStandards(), null);
@@ -327,21 +327,21 @@ public class CertificationResultManagerImpl implements CertificationResultManage
     }
 
     private Boolean haveMacraMeasuresChanged(List<MacraMeasure> orig, List<MacraMeasure> updated) {
-        if (orig == null && updated == null)  {
-            return false;
+        if (orig != null && updated != null) {
+            return !orig.equals(updated);
         } else if (orig != null && updated == null) {
             return true;
         } else if (orig == null && updated != null) {
             return true;
-        } else {
-            return !orig.equals(updated);
+        } else { //Both are null
+            return false;
         }
     }
 
     private int updateAdditionalSoftware(CertificationResult certResult,
             List<CertificationResultAdditionalSoftware> existingAdditionalSoftware,
             List<CertificationResultAdditionalSoftware> updatedAdditionalSoftware)
-            throws EntityCreationException, EntityRetrievalException {
+                    throws EntityCreationException, EntityRetrievalException {
         int numChanges = 0;
         List<CertificationResultAdditionalSoftware> additionalSoftwareToAdd = new ArrayList<CertificationResultAdditionalSoftware>();
         List<CertificationResultAdditionalSoftwarePair> additionalSoftwareToUpdate = new ArrayList<CertificationResultAdditionalSoftwarePair>();
@@ -372,7 +372,7 @@ public class CertificationResultManagerImpl implements CertificationResultManage
                         if (updatedItem.matches(existingItem)) {
                             inExistingListing = true;
                             additionalSoftwareToUpdate
-                                    .add(new CertificationResultAdditionalSoftwarePair(existingItem, updatedItem));
+                            .add(new CertificationResultAdditionalSoftwarePair(existingItem, updatedItem));
                         }
                     }
 
@@ -524,7 +524,7 @@ public class CertificationResultManagerImpl implements CertificationResultManage
 
     private int updateUcdProcesses(CertificationResult certResult, List<UcdProcess> existingUcdProcesses,
             List<UcdProcess> updatedUcdProcesses) throws EntityCreationException, EntityRetrievalException,
-            IOException {
+    IOException {
         int numChanges = 0;
         List<UcdProcess> ucdToAdd = new ArrayList<UcdProcess>();
         List<CertificationResultUcdProcessPair> ucdToUpdate = new ArrayList<CertificationResultUcdProcessPair>();
@@ -637,12 +637,12 @@ public class CertificationResultManagerImpl implements CertificationResultManage
                 if (updatedItem.getTestStandardId() == null
                         && !StringUtils.isEmpty(updatedItem.getTestStandardName())) {
                     TestStandardDTO foundStd = testStandardDAO.getByNumberAndEdition(updatedItem.getTestStandardName(),
-                            new Long(editionIdString));
+                            Long.valueOf(editionIdString));
                     if (foundStd == null) {
                         TestStandardDTO stdToCreate = new TestStandardDTO();
                         stdToCreate.setName(updatedItem.getTestStandardName());
                         stdToCreate.setDescription(updatedItem.getTestStandardDescription());
-                        stdToCreate.setCertificationEditionId(new Long(editionIdString));
+                        stdToCreate.setCertificationEditionId(Long.valueOf(editionIdString));
                         TestStandardDTO created = testStandardDAO.create(stdToCreate);
                         updatedItem.setTestStandardId(created.getId());
                     } else {
@@ -723,8 +723,8 @@ public class CertificationResultManagerImpl implements CertificationResultManage
                     TestToolDTO foundTool = testToolDAO.getByName(updatedItem.getTestToolName());
                     if (foundTool == null) {
                         LOGGER.error("Could not find test tool " + updatedItem.getTestToolName()
-                                + "; will not be adding this as a test tool to certification result id "
-                                + certResult.getId() + ", criteria " + certResult.getNumber());
+                        + "; will not be adding this as a test tool to certification result id "
+                        + certResult.getId() + ", criteria " + certResult.getNumber());
                     } else {
                         updatedItem.setTestToolId(foundTool.getId());
                         updatedItem.setTestToolVersion(updatedItem.getTestToolVersion());
@@ -798,7 +798,7 @@ public class CertificationResultManagerImpl implements CertificationResultManage
 
     private int updateTestData(CertificationResult certResult, List<CertificationResultTestData> existingTestData,
             List<CertificationResultTestData> updatedTestData)
-            throws EntityCreationException, EntityRetrievalException {
+                    throws EntityCreationException, EntityRetrievalException {
         int numChanges = 0;
         List<CertificationResultTestData> testDataToAdd = new ArrayList<CertificationResultTestData>();
         List<CertificationResultTestDataPair> testDataToUpdate = new ArrayList<CertificationResultTestDataPair>();
@@ -969,12 +969,12 @@ public class CertificationResultManagerImpl implements CertificationResultManage
             for (CertificationResultTestFunctionality updatedItem : updatedTestFunctionality) {
                 if (updatedItem.getTestFunctionalityId() == null && !StringUtils.isEmpty(updatedItem.getName())) {
                     TestFunctionalityDTO foundFunc = testFunctionalityDAO.getByNumberAndEdition(updatedItem.getName(),
-                            new Long(editionIdString));
+                            Long.valueOf(editionIdString));
                     if (foundFunc == null) {
                         LOGGER.error("Could not find test functionality " + updatedItem.getName()
-                                + " for certifiation edition id " + editionIdString
-                                + "; will not be adding this as a test functionality to listing id " + listing.getId()
-                                + ", criteria " + certResult.getNumber());
+                        + " for certifiation edition id " + editionIdString
+                        + "; will not be adding this as a test functionality to listing id " + listing.getId()
+                        + ", criteria " + certResult.getNumber());
                     } else {
                         updatedItem.setTestFunctionalityId(foundFunc.getId());
                     }
@@ -1415,7 +1415,7 @@ public class CertificationResultManagerImpl implements CertificationResultManage
         return certResultDAO.getTestTasksForCertificationResult(certificationResultId);
     }
 
-    private class CertificationResultAdditionalSoftwarePair {
+    private static class CertificationResultAdditionalSoftwarePair {
         private CertificationResultAdditionalSoftware orig;
         private CertificationResultAdditionalSoftware updated;
 
@@ -1442,7 +1442,7 @@ public class CertificationResultManagerImpl implements CertificationResultManage
         }
     }
 
-    private class CertificationResultUcdProcessPair {
+    private static class CertificationResultUcdProcessPair {
         private UcdProcess orig;
         private UcdProcess updated;
 
@@ -1468,7 +1468,7 @@ public class CertificationResultManagerImpl implements CertificationResultManage
         }
     }
 
-    private class CertificationResultTestDataPair {
+    private static class CertificationResultTestDataPair {
         private CertificationResultTestData orig;
         private CertificationResultTestData updated;
 
@@ -1494,7 +1494,7 @@ public class CertificationResultManagerImpl implements CertificationResultManage
         }
     }
 
-    private class TestTaskPair {
+    private static class TestTaskPair {
         private TestTask orig;
         private TestTask updated;
 
@@ -1520,7 +1520,7 @@ public class CertificationResultManagerImpl implements CertificationResultManage
         }
     }
 
-    private class TestParticipantPair {
+    private static class TestParticipantPair {
         private TestParticipant orig;
         private TestParticipant updated;
 
